# OMZ-Lab0

./: Lab0.cabal  cabal.project  dicom.ipynb  dicom.py  sus.txt
dicom/src/Data/DICOM/: Tag.hs
src/: DicomExample.hs  HelloTriangle.hs
