cabal-version: 3.0
name:          Lab0
version:       0.1.0.3
build-type:    Simple
author:        Maksym Syvash
category:      Graphics
data-files:    DICOM_Image_8b.dcm

executable Lab0
  main-is:          HelloTriangle.hs
  build-depends:
    , base
    , GPipe
    , GPipe-GLFW
    , JuicyPixels
    , linear

  ghc-options:      -Wall -threaded
  hs-source-dirs:   src
  default-language: GHC2021

executable DicomExample
  main-is:          DicomExample.hs
  other-modules:    Paths_Lab0
  build-depends:
    , base
    , binary
    , bytestring   >=0.12.0.0
    , dicom
    , GPipe
    , GPipe-GLFW
    , JuicyPixels
    , lens
    , linear
    , pretty

  ghc-options:      -Wall -threaded
  hs-source-dirs:   src
  default-language: GHC2021
